--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -423,8 +423,8 @@ jobs:
         uses: softprops/action-gh-release@v2.1.0
         if: ${{ env.useAnykernel == 'true' && env.release == 'true' }}
         with:
-          tag_name: v${{ env.builddate }}.${{ github.run_number }}
-          name: v${{ env.builddate }}.${{ github.run_number }}
+          tag_name: v${{ env.builddate }}
+          name: v${{ env.builddate }}
           make_latest: true
           prerelease: false
           draft: false
