TG Report: Update anded auto cleaner

--- a/.github/workflows/telegram-report.yml
+++ b/.github/workflows/telegram-report.yml
@@ -19,6 +19,12 @@ jobs:
         id: generate-builddate
         run: echo "builddate=$(date +'%Y%m%d')" >> $GITHUB_ENV
 
+      - name: Clear older runs
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          gh run list -L400 --json databaseId -q '.[].databaseId' | tail -n+5 | xargs -IID gh api "repos/$GITHUB_REPOSITORY/actions/runs/ID" -X DELETE || :
+
       - name: Fetch Latest Release
         id: fetch_release
         run: |
