--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -274,17 +274,17 @@ jobs:
           echo -e "SUSFS_REF=$SUSFS_REF" >> $GITHUB_OUTPUT
           echo -e "SUSFS_BRANCH=$SUSFS_BRANCH" >> $GITHUB_OUTPUT
 
-          if [[ "$whichhook" == "standard" && ( "$withRoot" == "ksu" || "$withRoot" == "sukisu" ) ]]; then
+          if [[ "$whichhook" == "standard" ]]; then
             if [[ "$KNAME" == "nova" ]]; then
               patch -p1 < SUSFS/kernel_patches/kernels/nova/0001-standard-ksu-hook.patch
             else
               patch -p1 < SUSFS/kernel_patches/0001-standard-ksu-hook.patch
             fi
-          elif [[ "$whichhook" == "syscall" && ( "$withRoot" == "ksu" || "$withRoot" == "sukisu" ) ]]; then
+          elif [[ "$whichhook" == "syscall" ]]; then
             patch -p1 < SUSFS/kernel_patches/0001-syscall-ksu-hook.patch
-          elif [[ "$whichhook" == "syscall" && "$withRoot" == "ksun" ]]; then
-            patch -p1 < SUSFS/kernel_patches/0001-syscall-ksu-hook.patch
-            curl -LSs https://github.com/backslashxx/KernelSU/commit/bbeeb36.patch | patch -d KernelSU -p1
+            if [[ "$withRoot" == "ksun" ]]; then
+              curl -LSs https://github.com/backslashxx/KernelSU/commit/bbeeb36.patch | patch -d KernelSU -p1
+            fi
           fi
 
       - name: "🥷 Add SUSFS patches"
@@ -320,15 +320,6 @@ jobs:
             else
               curl -LSs "https://raw.githubusercontent.com/SukiSU-Ultra/SukiSU-Ultra/main/kernel/setup.sh" | bash -s susfs-dev
             fi
-          fi
-
-          if [[ "$whichhook" == "standard" && ( "$withRoot" == "ksu" || "$withRoot" == "sukisu" ) ]]; then
-            echo -e "Standard KernelSU patches selected."
-          elif [[ "$whichhook" == "syscall" && ( "$withRoot" == "ksu" || "$withRoot" == "sukisu" ) ]]; then
-            patch -p1 < SUSFS/kernel_patches/0001-syscall-ksu-hook.patch
-          elif [[ "$whichhook" == "syscall" && "$withRoot" == "ksun" ]]; then
-            patch -p1 < SUSFS/kernel_patches/0001-syscall-ksu-hook.patch
-            curl -LSs https://github.com/backslashxx/KernelSU/commit/bbeeb36.patch | patch -d KernelSU -p1
           fi
 
           if [[ "$KNAME" == "power" ]]; then
