--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -275,11 +275,7 @@ jobs:
           echo -e "SUSFS_BRANCH=$SUSFS_BRANCH" >> $GITHUB_OUTPUT
 
           if [[ "$whichhook" == "standard" ]]; then
-            if [[ "$KNAME" == "nova" ]]; then
-              patch -p1 < SUSFS/kernel_patches/kernels/nova/0001-standard-ksu-hook.patch
-            else
-              patch -p1 < SUSFS/kernel_patches/0001-standard-ksu-hook.patch
-            fi
+            patch -p1 < SUSFS/kernel_patches/0001-standard-ksu-hook.patch
           elif [[ "$whichhook" == "syscall" ]]; then
             patch -p1 < SUSFS/kernel_patches/0001-syscall-ksu-hook.patch
             if [[ "$withRoot" == "ksun" ]]; then
@@ -322,15 +318,11 @@ jobs:
             fi
           fi
 
-          if [[ "$KNAME" == "power" ]]; then
-            patch -p1 < SUSFS/kernel_patches/kernels/power/50_add_susfs_in_kernel-4.14.patch
-          elif [[ "$KNAME" == "nova" ]]; then
-            patch -p1 < SUSFS/kernel_patches/kernels/nova/50_add_susfs_in_kernel-4.14.patch
+          if [[ "$KNAME" == "nova" || "$KNAME" == "power" ]]; then
+            patch -p1 < SUSFS/kernel_patches/50_add_susfs_in_kernel-4.14_2.patch
           else
-            patch -p1 < SUSFS/kernel_patches/50_add_susfs_in_kernel-4.14.patch
+            patch -p1 < SUSFS/kernel_patches/50_add_susfs_in_kernel-4.14_1.patch
           fi
-
-          patch -p1 --verbose < SUSFS/kernel_patches/backport-fs-upstream-susfs-v1.5.7-non-gki.patch
 
           echo -e "#Susfs4ksu" >> arch/${{ env.arch }}/configs/${{ env.DEFCONFIG_NAME }}
           echo -e "CONFIG_KSU_SUSFS=y" >> arch/${{ env.arch }}/configs/${{ env.DEFCONFIG_NAME }}
