build: changed susfs-main for sukisu

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -314,7 +314,7 @@ jobs:
             if [[ "$withRoot" == "ksu" ]]; then
               curl -LSs "https://raw.githubusercontent.com/rsuntk/KernelSU/main/kernel/setup.sh" | bash -s susfs-main
             else
-              curl -LSs "https://raw.githubusercontent.com/SukiSU-Ultra/SukiSU-Ultra/main/kernel/setup.sh" | bash -s susfs-dev
+              curl -LSs "https://raw.githubusercontent.com/SukiSU-Ultra/SukiSU-Ultra/main/kernel/setup.sh" | bash -s susfs-main
             fi
           fi
 
