build: added backslashxx KernelSU Supports

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,8 +17,9 @@ jobs:
         id: fetch_latest_commits
         run: |
           declare -A repos=(
+            ["RKSU"]="rsuntk/KernelSU@main"
+            ["MKSU"]="backslashxx/KernelSU@magic"
             ["KernelSU-Next"]="KernelSU-Next/KernelSU-Next@next"
-            ["KernelSU"]="rsuntk/KernelSU@main"
             ["SukiSU-Ultra"]="SukiSU-Ultra/SukiSU-Ultra@main"
           )
           
