--- a/.github/workflows/telegram-report.yml
+++ b/.github/workflows/telegram-report.yml
@@ -42,7 +42,7 @@ jobs:
           fi
 
       - name: Getting KernelSU version
-        id: integrate-ksu
+        id: integrate-rksu
         run: |
           if [ -d "./KernelSU" ]; then
             rm -rf "./KernelSU"
@@ -50,11 +50,26 @@ jobs:
 
           git clone --recursive -j $(nproc) --branch main https://github.com/rsuntk/KernelSU KernelSU
 
-          KernelSU_VERSION=$(git -C KernelSU describe --abbrev=0 --tags)
+          RKSU_VERSION=$(git -C KernelSU describe --abbrev=0 --tags)
 
-          echo "KernelSU version: $KernelSU_VERSION"
+          echo "KernelSU version: $RKSU_VERSION"
 
-          echo "KernelSU_VERSION=$KernelSU_VERSION" >> $GITHUB_ENV
+          echo "RKSU_VERSION=$RKSU_VERSION" >> $GITHUB_ENV
+
+      - name: Getting KernelSU version
+        id: integrate-mksu
+        run: |
+          if [ -d "./KernelSU" ]; then
+            rm -rf "./KernelSU"
+          fi
+
+          git clone --recursive -j $(nproc) --branch main https://github.com/rsuntk/KernelSU KernelSU
+
+          MKSU_VERSION=$(git -C KernelSU describe --abbrev=0 --tags)
+
+          echo "KernelSU version: $MKSU_VERSION"
+
+          echo "MKSU_VERSION=$MKSU_VERSION" >> $GITHUB_ENV
 
       - name: Getting SukiSU-Ultra version
         id: integrate-sukisu-ultra
@@ -101,7 +116,8 @@ jobs:
 
           ▫️ *Device:* Begonia
           ▫️ *Non-Patch Variant*
-          ▫️ *KernelSU:* ${{ env.KernelSU_VERSION }}
+          ▫️ *RKSU:* ${{ env.RKSU_VERSION }}
+          ▫️ *MKSU:* ${{ env.MKSU_VERSION }}
           ▫️ *KernelSU-Next:* ${{ env.KERNELSUN_VERSION }}
           ▫️ *SukiSU-Ultra:* ${{ env.SUKISU_VERSION }}
           ▫️ *APatch:* Supported
@@ -115,8 +131,10 @@ jobs:
 
           📥 *Download Links:*
           - GitHub Release: [${{ env.RELEASE_NAME }}](${{ env.RELEASE_URL }})
-          - KernelSU Manager:
-            [Release](https://github.com/rsuntk/KernelSU/releases/${{ env.KernelSU_VERSION }}) | [Nightly](https://nightly.link/rsuntk/KernelSU/workflows/build-manager/main)
+          - RKSU Manager:
+            [Release](https://github.com/rsuntk/KernelSU/releases/${{ env.RKSU_VERSION }}) | [Nightly](https://nightly.link/rsuntk/KernelSU/workflows/build-manager/main)
+          - MKSU Manager:
+            [Release](https://github.com/backslashxx/KernelSU/releases/${{ env.MKSU_VERSION }}) | [Nightly](https://nightly.link/backslashxx/KernelSU/workflows/build-manager/magic)
           - KernelSU-Next Manager:
             [Release](https://github.com/KernelSU-Next/KernelSU-Next/releases/${{ env.KERNELSUN_VERSION }}) | [Nightly](https://nightly.link/KernelSU-Next/KernelSU-Next/workflows/build-manager-ci/next/Manager)
           - SukiSU-Ultra Manager:
